--- a/css/nav.css
+++ b/css/nav.css
@@ -12,7 +12,7 @@
 }
 
 .menu ul li a{
-	color: black;
+	color: #ffe7d7;
 	font-weight: bold;
 	font-family: helvetica;
 	text-decoration: none;
@@ -21,4 +21,12 @@
 
 .menu ul li a:hover{
 	border-bottom: 2px solid;
+	
+}
+.glock img{
+	display: inline-block;
+	opacity: 1;
+	max-width: 1000%;
+  height: auto;
+
 }
