--- a/css/head.css
+++ b/css/head.css
@@ -1,8 +1,14 @@
 header {
+	font-color: #ffe7d7;
+	text-align: right;
 	font-size: 50px;
 	font-family: helvetica;
 	font-weight: bold;
 	margin-top: 70px;
-	margin-left: 1070px;
+	margin-right: 70px;
 	text-decoration: none;
+	border-bottom: 5px solid #ffe7d7;
 }
+div .rack{
+		opacity: 0.5;
+	}
